# controllers/file.go
@@ -30,7 +30,6 @@ func (c *FileController) URLMapping() {
 // Post ...
 // @Title Post
 // @Description create File
-// @Param	access_token	query	string	true	"access_token"
 // @Param	file		form 	file	true		"body for File content"
 // @Success 201 {int} models.File
 // @Failure 403 body is empty
@@ -104,7 +103,6 @@ func (c *FileController) Post() {
 // GetOne ...
 // @Title Get One
 // @Description get File by id
-// @Param	access_token	query	string	true	"access_token"
 // @Param	id		path 	string	true		"The key for staticblock"
 // @Success 200 {object} models.File
 // @Failure 403 :id is empty
@@ -124,7 +122,6 @@ func (c *FileController) GetOne() {
 // GetAll ...
 // @Title Get All
 // @Description get File
-// @Param	access_token	query	string	true	"access_token"
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
 // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
@@ -188,7 +185,6 @@ func (c *FileController) GetAll() {
 // Put ...
 // @Title Put
 // @Description update the File
-// @Param	access_token	query	string	true	"access_token"
 // @Param	id		path 	string	true		"The id you want to update"
 // @Param	body		body 	models.File	true		"body for File content"
 // @Success 200 {object} models.File
@@ -213,7 +209,6 @@ func (c *FileController) Put() {
 // Delete ...
 // @Title Delete
 // @Description delete the File
-// @Param	access_token	query	string	true	"access_token"
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 403 id is empty
